[gd_scene load_steps=3 format=3 uid="uid://de4ggdwiara56"]

[ext_resource type="Script" uid="uid://brabuaqkcg3c6" path="res://globals/assess_criterion_manager/assess_criterion_manager.gd" id="1_qatoi"]
[ext_resource type="PackedScene" uid="uid://chw3reglhg6by" path="res://objects/ui/chart_visualizer/chart_visualizer.tscn" id="2_lt3pt"]

[node name="AssessManager" type="Node2D"]
script = ExtResource("1_qatoi")

[node name="Pewnik" type="Button" parent="."]
offset_left = 133.0
offset_top = 19.0
offset_right = 197.0
offset_bottom = 50.0
text = "Pewnik"

[node name="Loteria" type="Button" parent="."]
offset_left = 289.0
offset_top = 23.0
offset_right = 352.0
offset_bottom = 54.0
text = "Loteria"

[node name="punkt_dodaj" type="Button" parent="."]
offset_left = 115.0
offset_top = 155.0
offset_right = 217.0
offset_bottom = 186.0
text = "dodaj punkt"

[node name="obojętnie" type="Button" parent="."]
offset_left = 205.0
offset_top = 81.0
offset_right = 287.0
offset_bottom = 112.0
text = "obojętnie"

[node name="scenariusz" type="Button" parent="."]
offset_left = 264.0
offset_top = 157.0
offset_right = 354.0
offset_bottom = 188.0
text = "scenariusz"

[node name="ChartVisualizer" parent="." instance=ExtResource("2_lt3pt")]
offset_left = 498.0
offset_top = 35.0
offset_right = 1218.0
offset_bottom = 635.0

[connection signal="points_changed" from="." to="ChartVisualizer" method="set_points"]
[connection signal="pressed" from="Pewnik" to="." method="_on_pewnik_pressed"]
[connection signal="pressed" from="Loteria" to="." method="_on_loteria_pressed"]
[connection signal="pressed" from="punkt_dodaj" to="." method="_on_punkt_dodaj_pressed"]
[connection signal="pressed" from="obojętnie" to="." method="_on_obojętnie_pressed"]
[connection signal="pressed" from="scenariusz" to="." method="_on_scenariusz_pressed"]
